<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="table_reservation">Table Reservation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="group_size">Group Size</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="uncheck_for_non_smoking_area">(Uncheck for Non-Smoking Area)</string>
    <string name="reserve_table">Reserve Table</string>
    <string name="reset">Reset</string>
</resources>